k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: labwatch-api-svc
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: labwatch-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
